re PR c++/61507 (GCC does not compile function with parameter pack.)

PR c++/61507
	* pt.c (resolve_overloaded_unification): Preserve
	ARGUMENT_PACK_EXPLICIT_ARGS.

From-SVN: r211819